Fixed name too long to work with ellipsis, auto beautify code on maiview.html, make side menu buttons work

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -106,7 +106,6 @@ button:focus {
   overflow: auto;
   height: 100%;
   width: 100%;
-  display: table;
   position: relative;
 }
 .dots_bg {
